<resources>
    <string name="action_ok">OK</string>
    <string name="active_parking_hours_title">Hours</string>
    <string name="active_parking_minutes_title">Minutes</string>
    <string name="active_parking_no_active_parking">No active parking</string>
    <string name="active_parking_parking_expired">Parking has expired.</string>
    <string name="active_parking_parking_expiring">Parking will expire in 10 minutes.</string>
    <string name="active_parking_seconds_title">Seconds</string>
    <string name="active_parking_title">Active Parking</string>
    <string name="add_remove_car_car">TODO</string>
    <string name="add_remove_car_timer">timer</string>
    <string name="app_name">LetsPark</string>
    <string name="authentication_enable_connectivity_error">Please enable Wi-Fi or Mobile data.</string>
    <string name="base_url">https://maps.googleapis.com/maps/api/</string>
    <string name="description_car_number_plate">car number plate</string>
    <string name="description_date_time">date time</string>
    <string name="description_delete">delete</string>
    <string name="description_duration">duration</string>
    <string name="description_location">location</string>
    <string name="description_payment">payment</string>
    <string name="description_transaction_id">transaction ID</string>
    <string name="drawer_title_history">History</string>
    <string name="error_car_number_plate_already_linked_with_your_account">Car number plate already linked with your account.</string>
    <string name="error_enter_car_number_plate">Enter car number plate</string>
    <string name="hint_enter_car_number_late">Enter car number plate</string>
    <string name="home_dialog_title_select_duration">Select Duration</string>
    <string name="home_dialog_title_select_parking">Select Parking</string>
    <string name="home_empty_car_number_plate_error">Please select a car.</string>
    <string name="home_empty_duration_error">Please select a duration.</string>
    <string name="home_radio_four_hours">4 hours</string>
    <string name="home_radio_one_day">1 day</string>
    <string name="home_radio_one_hour">1 hour</string>
    <string name="home_radio_three_hours">3 hours</string>
    <string name="home_radio_two_hours">2 hours</string>
    <string name="home_select_car">Select car</string>
    <string name="home_select_duration">Select duration</string>
    <string name="marker_default_distance_msg">0.0 km</string>
    <string name="marker_default_duration_msg">0 mins</string>
    <string name="marker_distance_duration_calculation_error">Failed to calculate distance, rate and duration. Please enable Wi-Fi or Mobile data.</string>
    <string name="marker_distance_subtitle">Distance</string>
    <string name="marker_enable_connectivity_and_location_error">Please enable location and connect to Internet.</string>
    <string name="marker_enable_connectivity_error">Please enable Wi-Fi or Mobile data.</string>
    <string name="marker_estimated_time_subtitle">Estimated Time</string>
    <string name="marker_getting_location_msg">Getting location. Please make sure location setting is enabled.</string>
    <string name="marker_loading_empty_parking_bays_error">Error while loading empty parking bays</string>
    <string name="marker_per_hour_subtitle">per hour</string>
    <string name="msg_deleted_car">Deleted car</string>
    <string name="msg_no_car_added_yet">No car added yet</string>
    <string name="msg_saved_car">Saved car</string>
    <string name="notification_channel_description">Pop on screen</string>
    <string name="notification_channel_name">Expire Parking Channel</string>
    <string name="package_id">com.example.android.letspark.activeparking</string>
    <string name="permission_location_denied">Location permission was denied.</string>
    <string name="permission_location_granted">Location permission has been granted.</string>
    <string name="permission_location_never_show_again">Go to Settings and enable the location permission to maximum utilise Google Map features</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="preference_file_key">com.example.android.letspark.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_car">Car</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_motorist_home">LetsPark</string>
    <string name="active_parking_dialog_select_extend_duration">Select Extend Duration</string>
    <string name="active_parking_extend_successfully_msg">Extend successfully!</string>
    <string name="active_parking_enforcement_period_msg">Extended end time out of parking enforcement period, 8:00 AM to 5:00 PM.</string>
    <string name="home_parking_enforcement_period_msg">You are not in parking enforcement period, 8:00 AM to 5:00 PM.</string>
    <string name="active_parking_active_parking_exist">You have an active parking now.</string>
    <string name="drawer_title_sign_out">Sign out</string>
    <string name="drawer_title_payment_method">Payment method</string>
    <string name="home_select_parking">Select parking</string>
    <string name="home_radio_kk3_1">KK3–1</string>
    <string name="home_radio_kk3_2">KK3–2</string>
    <string name="home_radio_kk3_3">KK3–3</string>
    <string name="home_radio_kk3_4">KK3–4</string>
    <string name="home_radio_lib_1">LIB–1</string>
    <string name="home_radio_lib_2">LIB–2</string>
    <string name="home_radio_lib_3">LIB–3</string>
    <string name="home_empty_parking_error">Please select a parking.</string>
</resources>