<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/touch_feedback"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/image_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/description_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_black" />

    <ImageView
        android:id="@+id/image_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_car_number_plate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_location"
        app:srcCompat="@drawable/ic_car_black" />

    <TextView
        android:id="@+id/text_number_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/image_car"
        app:layout_constraintTop_toBottomOf="@+id/text_location"
        tools:text="WWW1234" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/image_location"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Kuantan" />

    <ImageView
        android:id="@+id/image_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_date_time"
        app:srcCompat="@drawable/ic_timer_black" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/image_duration"
        app:layout_constraintTop_toBottomOf="@+id/text_start_date_time"
        tools:text="1 hour" />

    <ImageView
        android:id="@+id/image_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_duration"
        app:srcCompat="@drawable/ic_money_black" />

    <TextView
        android:id="@+id/text_payment"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/image_payment"
        app:layout_constraintTop_toBottomOf="@+id/text_duration"
        tools:text="RM0.45" />

    <ImageView
        android:id="@+id/image_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_car"
        app:srcCompat="@drawable/ic_date_time_black" />

    <TextView
        android:id="@+id/text_start_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/image_date_time"
        app:layout_constraintTop_toBottomOf="@+id/text_number_plate"
        tools:text="2018-11-12 07:35 PM" />

    <ImageView
        android:id="@+id/image_transaction_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_transaction_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_payment"
        app:srcCompat="@drawable/ic_receipt_black" />

    <TextView
        android:id="@+id/text_transaction_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/image_transaction_id"
        app:layout_constraintTop_toBottomOf="@+id/text_payment"
        tools:text="-LRlJLIl4dU0Rt68uX34" />
</android.support.constraint.ConstraintLayout>